--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+},
   "dependencies": {
     "@clerk/nextjs": "^6.9.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -21,7 +20,7 @@
     "glob": "^11.0.0",
     "inflight": "^1.0.6",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.1.7",
     "react": "^18.3.0",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.5.0",
@@ -30,7 +29,8 @@
     "react-toastify": "^10.0.6",
     "rimraf": "^6.0.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
