--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.0",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/runtime": "^7.26.10",
+    "@clerk/nextjs": "^6.12.5",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.3",
     "@stream-io/node-sdk": "^0.4.5",
     "@stream-io/video-react-sdk": "^1.8.1",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "glob": "^11.0.0",
     "inflight": "^1.0.6",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.7",
+    "next": "^15.2.2",
     "react": "^18.3.0",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.5.0",
